# django-salesforce

./: .coveragerc  .editorconfig  .flake8  .gitignore  .travis.yml  20.3  AUTHORS.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  README.rst  __init__.py  coverage_run  coverage_run.sh  manage-tox.py  manage.py  models.py  mypy.ini  pylint.sh  pylintrc  pyproject.toml  requirements.txt  runtests.py  script.py  setup.cfg  setup.py  setuptools_git.py  slow_test.py  testSFmodel.txt  tox.ini  urls.py  views.py
.github/: FUNDING.yml
.github/workflows/: main.yml
business_notebooks/: Help.txt  amazon_web_services.ipynb  amortization.ipynb  django_initializer.py  electronic_benefit_verification.ipynb  live_monitoring.ipynb  numpy_financial.ipynb  pcp_utility.py  registration_blocking.ipynb  simple_salesforce.ipynb
docs/: details.rst  migrations.rst
env/: pyvenv.cfg
salesforce/: __init__.py  admin.py  apps.py  auth.py  defaults.py  fields.py  models.py  models_extend.py  models_template.py  rest.py  router.py  sfauth.py  sfjson.py  tests.py  tooling.py  urls.py  utils.py  views.py
scripts/: Help.txt  loan_app.py  sp_portal_loader.py
tests/: clean_test_data.py  db.sqlite3  mypy.sh  no_urls.py  tests.sh  tests_no_django.sh  to_mock.py
wiki/: Documents-and-Attachments.md  Empty-strings-in-filters.md  Error-messages.md  Experimental-Features.rest  Foreign-Key-Support.rest  Home.md  Introspection-and-Special-Attributes-of-Fields.rest  Lead-Conversion.rest  Release-Process.md  SSL-TLS-settings-and-Saleforce.com.rest  (+1 more)
(+223 files in other folders)
